# native-render-intercept-test

./: Cargo.toml  README.md
screen_capture/: Cargo.toml
screen_capture/UnityAssets/: NativeRenderInteceptor.cs
screen_capture/src/: lib.rs  unity.rs
src/: lib.rs  unity.rs
