[package]
name = "screen_capture"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "RenderingInterceptor"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
lazy_static = "1.0"
log = "0.4"
flexi_logger = "0.14"

[dependencies.bedrock]
git = "https://github.com/Pctg-x8/bedrock"
features = ["Presentation", "VK_KHR_win32_surface"]

[dependencies.winapi]
version = "0.3"
features = ["winuser", "libloaderapi", "consoleapi"]
